--- a/BTL_QlBi_a/Views/Home/Index.cshtml
+++ b/BTL_QlBi_a/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
         </div>
     </div>
 
-    <div class="filter-bar">
+    @* <div class="filter-bar">
         <div class="filter-row">
             <div class="filter-group">
                 <span class="filter-label">Khu vực:</span>
@@ -36,7 +36,7 @@
 
         <div class="filter-row">
             <input type="text" class="search-input" placeholder="Tìm kiếm bàn..." id="searchTables" onkeyup="searchTables()">
-        </div>
+        </div> *@
     </div>
 
     @if (Model != null && Model.Any())
