--- a/BTL_QlBi_a/wwwroot/asset/css/index.css
+++ b/BTL_QlBi_a/wwwroot/asset/css/index.css
@@ -334,7 +334,8 @@ body {
     border-radius: 12px;
     padding: 15px;
     box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-    display: flex;
+    display: flex !important;
+    visibility: visible !important;
     flex-direction: column;
     height: fit-content;
     max-height: calc(100vh - 230px);
